load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("//:version.bzl", "VERSION")
load("@bazel_skylib//rules:copy_file.bzl", "copy_file")

# gazelle:prefix github.com/kindlyops/streamer
# gazelle:exclude dummy.go
gazelle(
    name = "gazelle",
    external = "vendored",
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/kindlyops/streamer",
    visibility = ["//visibility:private"],
    deps = ["//cmd:go_default_library"],
)

go_binary(
    name = "streamer-linux",
    embed = [":go_default_library"],
    goarch = "amd64",
    goos = "linux",
    visibility = ["//visibility:public"],
    x_defs = {
        "version": VERSION,
    },
)

go_binary(
    name = "streamer-darwin",
    embed = [":go_default_library"],
    goarch = "amd64",
    goos = "darwin",
    visibility = ["//visibility:public"],
    x_defs = {
        "version": VERSION,
    },
)

go_binary(
    name = "streamer-windows",
    embed = [":go_default_library"],
    goarch = "amd64",
    goos = "windows",
    visibility = ["//visibility:public"],
    x_defs = {
        "version": VERSION,
    },
)

alias(
    name = "streamer",
    actual = select({
        "@io_bazel_rules_go//go/platform:linux_amd64": ":streamer-linux",
        "@io_bazel_rules_go//go/platform:darwin_amd64": ":streamer-darwin",
        "@io_bazel_rules_go//go/platform:windows_amd64": ":streamer-windows",
        "//conditions:default": ":streamer-linux",
    }),
)

copy_file(
    name = "install-darwin",
    src = "//:streamer-darwin",
    out = "bdist/streamer_darwin_amd64/streamer",
)

copy_file(
    name = "install-linux",
    src = "//:streamer-linux",
    out = "bdist/streamer_linux_amd64/streamer",
)

copy_file(
    name = "install-windows",
    src = "//:streamer-windows",
    out = "bdist/streamer_windows_amd64/streamer.exe",
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["main_test.go"],
    args = ["-cli"] + select({
        "@io_bazel_rules_go//go/platform:linux_amd64": [
            "$(location :streamer-linux)",
        ],
        "@io_bazel_rules_go//go/platform:darwin_amd64": [
            "$(location :streamer-darwin)",
        ],
        "@io_bazel_rules_go//go/platform:windows_amd64": [
            "$(location :streamer-windows)",
        ],
        "//conditions:default": [],
    }),
    data = select({
        "@io_bazel_rules_go//go/platform:linux_amd64": [
            ":streamer-linux",
        ],
        "@io_bazel_rules_go//go/platform:darwin_amd64": [
            ":streamer-darwin",
        ],
        "@io_bazel_rules_go//go/platform:windows_amd64": [
            ":streamer-windows",
        ],
        "//conditions:default": [],
    }),
    rundir = ".",
    deps = ["//vendor/github.com/bazelbuild/rules_go/go/tools/bazel"],
)

sh_binary(
    name = "vendor",
    srcs = ["vendor.sh"],
    args = [
        "$(location @bazel_gazelle//cmd/gazelle)",
    ],
    data = [
        "@bazel_gazelle//cmd/gazelle",
        "@go_sdk//:files",
    ],
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "lint",
    srcs = ["lint.sh"],
    args = [
        "$(location @bazel_gazelle//cmd/gazelle)",
    ],
    data = [
        "@bazel_gazelle//cmd/gazelle",
        "@go_sdk//:files",
    ],
    tags = ["manual"],
    visibility = ["//visibility:public"],
)
