load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "extract.go",
        "load.go",
        "root.go",
    ],
    importpath = "github.com/kindlyops/streamer/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/a8m/kinesis-producer:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws/session:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/service/kinesis:go_default_library",
        "//vendor/github.com/mattn/go-isatty:go_default_library",
        "//vendor/github.com/mitchellh/go-homedir:go_default_library",
        "//vendor/github.com/rs/zerolog:go_default_library",
        "//vendor/github.com/rs/zerolog/log:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
        "//vendor/github.com/spf13/viper:go_default_library",
    ],
)
